# character-foundry

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .semgrepignore  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  README.md  STATUS.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  gitleaks.toml  ideas.md
.claude/: settings.json
.githooks/: pre-push
.github/: pull_request_template.md
.harness/: README.md  mutation-baseline.json
api/: Dockerfile  alembic.ini  platform_constraints.yaml  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 20260423_001_extensions.py  20260423_002_teams.py  20260423_003_users.py  20260423_004_characters_skeleton.py  20260423_005_creation_sessions.py  20260423_006_checkpoints.py  20260423_007_bases.py  20260423_008_aliases.py  20260423_009_motions.py  20260423_010_generation_logs.py  20260423_011_tasks.py  20260423_012_refresh_tokens.py  20260425_013_reference_images.py  20260429_014_masks.py  20260430_015_motions_preset_unique.py  20260513_016_refresh_token_source.py
api/app/: cli.py  main.py
api/app/ai/: __init__.py  base.py  circuit.py  config.py  errors.py  factory.py  gpt_image_2.py  mask.py  progress.py  reconciler_client.py  stub.py  veo_3_1.py
api/app/ai/_fixtures/: __init__.py
api/app/api/: deps.py
api/app/api/routes/: aliases.py  auth.py  characters.py  checkpoints.py  creation_sessions.py  health.py  meta.py  motions.py  prompt.py  reference_images.py  storage.py  tasks.py
api/app/auth/: jwt.py  mcp_clients.py  oauth.py  passwords.py  provisioning.py  schemas.py  scopes.py  service.py  user_resolution.py
api/app/core/: constants.py  errors.py  permissions.py  platform_constraints.py  redis_client.py
api/app/db/: __init__.py  session.py
api/app/mcp/: __init__.py  app.py  auth.py  discovery.py  progress.py  registry.py
api/app/mcp/schemas/: __init__.py  alias.py  character.py  meta.py  motion.py  prompt.py  task.py
api/app/mcp/tools/: __init__.py  alias.py  character.py  hello.py  meta.py  motion.py  prompt.py  task.py
api/app/middleware/: error_handling.py
api/app/models/: __init__.py  alias.py  base.py  character.py  checkpoint.py  creation_session.py  generation_log.py  mask.py  motion.py  reference_image.py  refresh_token.py  task.py  team.py  user.py
api/app/prompt/: __init__.py  constraints.py  errors.py  menu_fragments.py  motion_templates.py  reconciler.py
api/app/repositories/: alias_repo.py  base_repo.py  character_repo.py  checkpoint_repo.py  creation_session_repo.py  generation_log_repo.py  mask_repo.py  motion_repo.py  reference_image_repo.py  task_repo.py
api/app/schemas/: alias.py  alias_builder.py  base.py  character.py  checkpoint.py  checkpoint_builder.py  creation_session.py  motion.py  motion_builder.py  prompt.py  reference_image.py  task.py
api/app/services/: alias_service.py  base_service.py  character_service.py  checkpoint_service.py  creation_session_service.py  degraded_services.py  fork_service.py  motion_service.py  prompt_service.py  sequence_service.py  task_service.py
api/app/storage/: __init__.py  backend.py  errors.py  local.py  signed_url.py
api/app/utils/: prompt_summary.py  slug.py  thumbnails.py
api/app/workers/: arq_worker.py
api/app/workers/jobs/: cleanup.py  create_alias.py  create_checkpoint.py  create_motion.py  noop.py
api/scripts/: _route_scan.py  agent_e2e_smoke.py  check_baseline_resync.py  check_mcp_clients_allowlist.py  check_mcp_tool_scopes.py  check_mutation_drift.py  check_scope_coverage.py  lint_mcp.sh
api/tests/: conftest.py
api/tests/abandon/: conftest.py  test_abandon_routes.py
api/tests/ai/: conftest.py  test_circuit.py  test_config.py  test_errors.py  test_factory.py  test_gpt_image_2.py  test_gpt_image_2_contract.py  test_gpt_image_2_edit.py  test_progress.py  test_real_provider_contract.py  test_reconciler_client.py  test_stub.py  test_veo_3_1.py
api/tests/aliases/: conftest.py  test_alias_routes.py  test_create_alias_worker.py  test_crud.py
api/tests/arch/: test_layering.py  test_mcp_clients_allowlist.py
api/tests/auth/: conftest.py  test_dual_stack.py  test_login.py  test_m2m_service_account.py  test_me.py  test_middleware.py  test_oauth_auto_provisioning.py  test_refresh.py  test_refresh_token.py  test_require_scope_no_pin.py
api/tests/characters/: conftest.py  test_routes.py
api/tests/checkpoints/: conftest.py  test_checkpoint_routes.py  test_create_checkpoint_worker.py  test_reference_image_routes.py  test_sequence_service.py
api/tests/cli/: test_provision_operator.py  test_seed_e2e.py
api/tests/creation_sessions/: conftest.py  test_routes.py
api/tests/fork/: conftest.py  test_fork_routes.py
api/tests/infra/: test_authentik_scope_emission.py  test_nginx_api.py  test_nginx_mcp.py
api/tests/mcp/: conftest.py  test_discovery.py  test_motion_preset_sync.py  test_registry.py  test_skeleton.py
api/tests/mcp/tools/: conftest.py  test_alias_add.py  test_alias_crud.py  test_character_create.py  test_character_crud.py  test_meta_tools.py  test_motion_crud.py  test_motion_generate.py  test_prompt_tools.py  test_task_tools.py
api/tests/migrations/: test_migrate.py
api/tests/motions/: conftest.py  test_create_motion_worker.py  test_crud.py  test_motion_routes.py
api/tests/prompt_preview/: conftest.py  test_prompt_preview.py
api/tests/prompt_preview/alias_motion/: conftest.py  test_alias_motion.py
api/tests/prompt_reconciler/: conftest.py  test_reconciler.py
api/tests/routes/: conftest.py  test_health.py  test_meta.py
api/tests/scripts/: conftest.py  test_baseline_resync.py  test_mcp_clients_allowlist.py  test_mcp_tool_scopes.py  test_route_scan.py  test_scope_coverage.py
api/tests/select_base/: conftest.py  test_select_base_routes.py
api/tests/storage/: test_local_backend.py  test_signed_url.py  test_storage_route.py
api/tests/tasks/: conftest.py  test_estimate_duration.py  test_noop_worker.py  test_sse_stream.py  test_task_routes.py  test_task_service.py
api/tests/utils/: test_slug.py
planning/: CLAUDE.md  (+1 more)
(+335 files in other folders)
