[project]
name = "character-foundry-api"
version = "0.1.0"
description = "Character Foundry backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.5",
    # pgvector column types are declared in ORM metadata so alembic
    # autogenerate doesn't see DB-only vector columns and emit DROP-COLUMN diffs.
    "pgvector>=0.3",
    "pyjwt>=2.9",
    "argon2-cffi>=23.1",
    # Used by pydantic EmailStr validation in app.auth.schemas.
    "email-validator>=2.2",
    "redis>=5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.11",
    # Required by fastapi.testclient (starlette.TestClient uses httpx).
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501", # handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
# Alembic migration files are generated / transitional — we don't type-check them.
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "alembic.*", "yaml.*"]
ignore_missing_imports = true
