[project]
name = "character-foundry-api"
version = "0.1.0"
description = "Character Foundry backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.5",
    # pgvector column types are declared in ORM metadata so alembic
    # autogenerate doesn't see DB-only vector columns and emit DROP-COLUMN diffs.
    "pgvector>=0.3",
    "pyjwt>=2.9",
    "argon2-cffi>=23.1",
    # Used by pydantic EmailStr validation in app.auth.schemas.
    "email-validator>=2.2",
    "redis>=5.0",
    "pyyaml>=6.0",
    "arq>=0.26",
    # Slug generation: Chinese → pinyin transliteration (T-016).
    "pypinyin>=0.51",
    # PIL for thumbnail generation in the create_checkpoint worker (T-017).
    "Pillow>=10.4",
    # FastAPI multipart parser — required by UploadFile / File() in the
    # T-017 reference-image upload route. Not a transitive dep of FastAPI
    # (CI stripped Python environments don't have it), so pin it explicitly.
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.11",
    # Required by fastapi.testclient (starlette.TestClient uses httpx).
    "httpx>=0.27",
    # In-memory Redis for unit tests of arq queue + pubsub paths.
    "fakeredis>=2.20",
    # Architecture fitness tests (T-059, Harness A2).
    "import-linter>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
# Ship non-Python assets bundled with the API package. Without this the
# default setuptools wheel drops the stub fixtures, so any non-editable
# install (e.g. the Docker image's `pip install .`) crashes on the first
# stub checkpoint with `FileNotFoundError: .../app/ai/_fixtures/...`.
# Editable installs on the host don't hit this because the source tree is
# the import root, but T-026 E2E exposes the wheel path.
# `*.mp4` covers the Veo placeholder fixture (T-029); add new globs as the
# stub fixture set grows.
"app.ai._fixtures" = ["*.png", "*.mp4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Default test run skips real-provider contract replay (T-058). Those tests
# hit live OpenAI / Veo endpoints and burn money; they only fire on the
# nightly `provider-contract.yml` workflow which sets `-m real_provider`
# explicitly. Local devs can opt in the same way. pytest's `-m` takes the
# last value on the command line, so `pytest -m real_provider` overrides
# this default without needing to disable addopts.
addopts = ["-m", "not real_provider"]
markers = [
    "real_provider: contract replay against live AI providers (T-058); skipped by default, run via `pytest -m real_provider` with API keys set",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501", # handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
# Alembic migration files are generated / transitional — we don't type-check them.
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "alembic.*", "yaml.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Architecture fitness — import-linter contracts (T-059, Harness A2).
#
# Enforced by `tests/arch/test_layering.py`, which shells out to
# `lint-imports --config pyproject.toml`. Failing contracts surface in PR CI
# via the existing `pytest` step — no separate workflow needed.
#
# Background: planning/harness/roadmap.md §1 A2.
# ---------------------------------------------------------------------------
[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Routes don't import ORM models directly"
type = "forbidden"
source_modules = ["app.api"]
forbidden_modules = ["app.models"]
# Only flag *direct* `from app.models...` imports inside `app.api.*`.
# The whole point of repositories / schemas is to be a sanctioned indirect
# bridge to ORM types; without this flag, every `route -> repository -> models`
# chain gets flagged and the contract becomes uneditable.
allow_indirect_imports = true
ignore_imports = [
    # ── Sanctioned auth-context pattern ──────────────────────────────────────
    # `Depends(get_current_user)` exposes the User ORM row to handlers so
    # they can do `user.id` / `user.team_id`. Long-term fix is to wrap it in
    # a UserContext Pydantic schema (STATUS.md backlog row S3.5-1). Until
    # then, treat these specific edges as an accepted exception, not a green
    # light to widen ignore_imports for new code.
    "app.api.deps -> app.models.user",
    "app.api.routes.aliases -> app.models.user",
    "app.api.routes.auth -> app.models.user",
    "app.api.routes.characters -> app.models.user",
    "app.api.routes.checkpoints -> app.models.user",
    "app.api.routes.creation_sessions -> app.models.user",
    "app.api.routes.motions -> app.models.user",
    "app.api.routes.prompt -> app.models.user",
    "app.api.routes.reference_images -> app.models.user",
    "app.api.routes.tasks -> app.models.user",
    # ── Real leaks ───────────────────────────────────────────────────────────
    # `routes/characters.py` and `routes/tasks.py` still reach into other
    # ORMs instead of going through repositories. Tracked in STATUS.md
    # backlog row S3.5-1; remove these entries once each call site is
    # migrated to `app.repositories.*`.
    "app.api.routes.characters -> app.models.character",
    "app.api.routes.characters -> app.models.creation_session",
    "app.api.routes.characters -> app.models.base",
    "app.api.routes.tasks -> app.models.task",
]

[[tool.importlinter.contracts]]
name = "AI clients don't depend on the HTTP layer"
type = "forbidden"
source_modules = ["app.ai"]
forbidden_modules = ["app.api"]
allow_indirect_imports = true

# Placeholder contract (M3.5 — T-054 / T-055):
#
# Once `app.mcp/` ships, both `app.mcp.*` and `app.auth.*` must source the
# five OAuth scope literals (`character:read`, `character:write`,
# `task:read`, `task:cancel`, `usage:read`) from one canonical module
# (`app.auth.scopes`) rather than each redefining them. import-linter alone
# cannot express "must import X" cleanly, so the actual enforcement is the
# `test_oauth_scope_source_is_centralized` test in `tests/arch/test_layering.py`,
# which activates automatically the moment `app/auth/scopes.py` exists.
#
# When T-054 lands, leave this comment block in place as breadcrumbs and add
# any genuinely import-direction rules that emerge (e.g. `app.api.routes.*`
# must not import `app.mcp.*`, or vice versa).
