[project]
name = "character-foundry-api"
version = "0.1.0"
description = "Character Foundry backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.5",
    # pgvector column types are declared in ORM metadata so alembic
    # autogenerate doesn't see DB-only vector columns and emit DROP-COLUMN diffs.
    "pgvector>=0.3",
    "pyjwt>=2.9",
    "argon2-cffi>=23.1",
    # Used by pydantic EmailStr validation in app.auth.schemas.
    "email-validator>=2.2",
    "redis>=5.0",
    "pyyaml>=6.0",
    "arq>=0.26",
    # Slug generation: Chinese → pinyin transliteration (T-016).
    "pypinyin>=0.51",
    # PIL for thumbnail generation in the create_checkpoint worker (T-017).
    "Pillow>=10.4",
    # FastAPI multipart parser — required by UploadFile / File() in the
    # T-017 reference-image upload route. Not a transitive dep of FastAPI
    # (CI stripped Python environments don't have it), so pin it explicitly.
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.11",
    # Required by fastapi.testclient (starlette.TestClient uses httpx).
    "httpx>=0.27",
    # In-memory Redis for unit tests of arq queue + pubsub paths.
    "fakeredis>=2.20",
    # Architecture fitness tests (T-059, Harness A2).
    "import-linter>=2.0",
    # Mutation testing on high-trust modules (T-060, Harness A3).
    # Runs nightly via `.github/workflows/mutation.yml`, NOT in PR CI —
    # a full sweep over `app/core/errors.py` + `app/ai/circuit.py` +
    # `app/auth/*` takes 30+ min and would suffocate the PR loop.
    "mutmut>=3.0",
    # Secret scan + SAST baseline (T-061, Harness A4). `bandit[toml]` so
    # the `[tool.bandit]` config block below is honoured. `semgrep` runs
    # the `p/owasp-top-ten` registry pack against `app/` in PR CI; rule
    # set is fetched at scan time so no local rule files live in the repo.
    "bandit[toml]>=1.7",
    "semgrep>=1.50",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
# Ship non-Python assets bundled with the API package. Without this the
# default setuptools wheel drops the stub fixtures, so any non-editable
# install (e.g. the Docker image's `pip install .`) crashes on the first
# stub checkpoint with `FileNotFoundError: .../app/ai/_fixtures/...`.
# Editable installs on the host don't hit this because the source tree is
# the import root, but T-026 E2E exposes the wheel path.
# `*.mp4` covers the Veo placeholder fixture (T-029); add new globs as the
# stub fixture set grows.
"app.ai._fixtures" = ["*.png", "*.mp4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Default test run skips real-provider contract replay (T-058). Those tests
# hit live OpenAI / Veo endpoints and burn money; they only fire on the
# nightly `provider-contract.yml` workflow which sets `-m real_provider`
# explicitly. Local devs can opt in the same way. pytest's `-m` takes the
# last value on the command line, so `pytest -m real_provider` overrides
# this default without needing to disable addopts.
addopts = ["-m", "not real_provider"]
markers = [
    "real_provider: contract replay against live AI providers (T-058); skipped by default, run via `pytest -m real_provider` with API keys set",
]

# ---------------------------------------------------------------------------
# Coverage gate (T-060, Harness A3).
#
# `fail_under` fires only when coverage is actually computed (i.e. callers
# pass `--cov=app`). Local `pytest tests/auth/test_login.py` runs without
# coverage and therefore without the gate — only the CI invocation
# `pytest --cov=app --cov-report=term` red-CIs on regression.
#
# Threshold sits 2 points below the 2026-05-12 baseline of 77 % (see
# `planning/harness/scope.md` §2.5) so legitimate variance from excluded
# lines doesn't false-alarm. Tighten manually as coverage climbs; never
# auto-raise (per ticket Notes — incentivises dummy tests).
# ---------------------------------------------------------------------------
[tool.coverage.report]
fail_under = 75
skip_covered = false
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"
# `mutants/` is mutmut's sandbox copy of the codebase with trampoline
# injections — see `[tool.mutmut]` below. Linting the generated files
# is meaningless and breaks PR CI when a developer runs `mutmut run`
# locally before pushing.
extend-exclude = ["alembic/versions", "mutants"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501", # handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
# Alembic migration files are generated / transitional — we don't type-check them.
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "alembic.*", "yaml.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Bandit SAST (T-061, Harness A4).
#
# Invoked from CI as `bandit -c pyproject.toml -r app/`. Tests stay out of
# scope on purpose — B101 (`assert_used`) fires on every pytest assertion,
# and `tests/conftest.py` deliberately spins up insecure fixtures (e.g.
# fakeredis without TLS). Alembic auto-generated migrations are similarly
# noisy and don't represent production attack surface.
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", "alembic"]

# ---------------------------------------------------------------------------
# Architecture fitness — import-linter contracts (T-059, Harness A2).
#
# Enforced by `tests/arch/test_layering.py`, which shells out to
# `lint-imports --config pyproject.toml`. Failing contracts surface in PR CI
# via the existing `pytest` step — no separate workflow needed.
#
# Background: planning/harness/roadmap.md §1 A2.
# ---------------------------------------------------------------------------
[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Routes don't import ORM models directly"
type = "forbidden"
source_modules = ["app.api"]
forbidden_modules = ["app.models"]
# Only flag *direct* `from app.models...` imports inside `app.api.*`.
# The whole point of repositories / schemas is to be a sanctioned indirect
# bridge to ORM types; without this flag, every `route -> repository -> models`
# chain gets flagged and the contract becomes uneditable.
allow_indirect_imports = true
ignore_imports = [
    # ── Sanctioned auth-context pattern ──────────────────────────────────────
    # `Depends(get_current_user)` exposes the User ORM row to handlers so
    # they can do `user.id` / `user.team_id`. Long-term fix is to wrap it in
    # a UserContext Pydantic schema (STATUS.md backlog row S3.5-1). Until
    # then, treat these specific edges as an accepted exception, not a green
    # light to widen ignore_imports for new code.
    "app.api.deps -> app.models.user",
    "app.api.routes.aliases -> app.models.user",
    "app.api.routes.auth -> app.models.user",
    "app.api.routes.characters -> app.models.user",
    "app.api.routes.checkpoints -> app.models.user",
    "app.api.routes.creation_sessions -> app.models.user",
    "app.api.routes.motions -> app.models.user",
    "app.api.routes.prompt -> app.models.user",
    "app.api.routes.reference_images -> app.models.user",
    "app.api.routes.tasks -> app.models.user",
    # ── Real leaks ───────────────────────────────────────────────────────────
    # `routes/characters.py` and `routes/tasks.py` still reach into other
    # ORMs instead of going through repositories. Tracked in STATUS.md
    # backlog row S3.5-1; remove these entries once each call site is
    # migrated to `app.repositories.*`.
    "app.api.routes.characters -> app.models.character",
    "app.api.routes.characters -> app.models.creation_session",
    "app.api.routes.characters -> app.models.base",
    "app.api.routes.tasks -> app.models.task",
]

[[tool.importlinter.contracts]]
name = "AI clients don't depend on the HTTP layer"
type = "forbidden"
source_modules = ["app.ai"]
forbidden_modules = ["app.api"]
# Indirect imports are forbidden here on purpose — there is no legitimate
# `ai -> X -> api` indirection in the architecture, so a future chain via
# `app.core` or `app.schemas` SHOULD trip this contract. Only the
# `routes -> models` rule above turns this flag on, because repositories /
# schemas are the sanctioned indirect bridge to ORM types.

# Placeholder contract (M3.5 — T-054 / T-055):
#
# Once `app.mcp/` ships, both `app.mcp.*` and `app.auth.*` must source the
# five OAuth scope literals (`character:read`, `character:write`,
# `task:read`, `task:cancel`, `usage:read`) from one canonical module
# (`app.auth.scopes`) rather than each redefining them. import-linter alone
# cannot express "must import X" cleanly, so the actual enforcement is the
# `test_oauth_scope_source_is_centralized` test in `tests/arch/test_layering.py`,
# which activates automatically the moment `app/auth/scopes.py` exists.
#
# When T-054 lands, replace this comment block with the actual contract(s)
# you need — OR keep this comment alongside a sibling `[[tool.importlinter.contracts]]`
# block, but leave the breadcrumb in either case so the next implementer
# knows the scope-source story.

# ---------------------------------------------------------------------------
# Mutation testing — mutmut config (T-060, Harness A3).
#
# Current scope: the two trust-bearing modules whose test suites stay
# inside pure-Python territory:
#   * `app/core/errors.py`   — AgentError envelope is the API trust boundary
#   * `app/ai/circuit.py`    — fail-safe wrong → caller never finds out
#
# `app/auth/*` is part of the ticket's design intent (pre-OAuth baseline
# for T-054) but its test suite transitively imports `app.main` → ORM
# models → `pgvector` → numpy, which collides with mutmut 3.5's in-
# process trampoline approach (`ImportError: cannot load module more
# than once per process` during pytest collection on the mutated
# workspace; reproduced 2026-05-12). Forking via `pytest-forked` works
# at the test level but breaks mutmut's `mutate_only_covered_lines`
# stats collection because forked subprocesses don't report trampoline
# hits back to the parent. Deferred to a follow-up — adding auth/* later
# is purely a `paths_to_mutate` + `tests_dir` edit + baseline rerun once
# the isolation story is solved (cosmic-ray switch, conftest refactor,
# or upstream mutmut fix all in play).
#
# Runs nightly via `.github/workflows/mutation.yml` (NOT in PR CI — a
# full sweep takes 5–10 min today; will grow when auth/* lands). The
# workflow compares the run's kill rate against
# `.harness/mutation-baseline.json` and opens a `mutation-drift`-labelled
# issue if it drops more than 5 pp.
#
# `mutate_only_covered_lines = true` is the speed knob: mutmut asks
# coverage.py which lines have *any* test touching them and skips
# mutations on the rest. Without it, mutmut wastes time on dead code
# paths that no test could ever distinguish.
# ---------------------------------------------------------------------------
[tool.mutmut]
paths_to_mutate = [
    "app/core/errors.py",
    "app/ai/circuit.py",
]
# Restrict tests to the suites that demonstrably touch the mutation
# targets and do NOT transitively import `app.main` / ORM models. The
# selection below was derived from a coverage trace plus a `grep -L
# 'app\\.models\\|app\\.main'` over each `tests/<dir>/conftest.py` on
# 2026-05-12. Anything that pulls pgvector via ORM blows the in-process
# numpy reload guard.
tests_dir = [
    "tests/ai/test_circuit.py",
    "tests/ai/test_errors.py",
    "tests/ai/test_gpt_image_2.py",
    "tests/ai/test_gpt_image_2_edit.py",
    "tests/ai/test_reconciler_client.py",
    "tests/ai/test_stub.py",
    "tests/ai/test_veo_3_1.py",
    "tests/prompt_reconciler/test_reconciler.py",
]
mutate_only_covered_lines = true
# Files mutmut needs available in its sandbox workspace beyond the
# defaults (`tests/`, `setup.cfg`, `pyproject.toml`, `pytest.ini`,
# `.gitignore`). Without these, the mutated imports of `app.*` fail at
# collection time and every mutant looks "killed" for the wrong reason
# — a green run that proves nothing.
also_copy = [
    "app/",
    "alembic/",
    "alembic.ini",
    "platform_constraints.yaml",
]
